dev-capec/force-app/main/default/objects/ItemEstoque__c/ItemEstoque__c.object-meta.xml
<CustomObject>
    <label>Item de Estoque</label>
    <nameField>
        <displayFormat>IE-{000000}</displayFormat>
        <label>Item de Estoque</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens de Estoques</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>