dev-capec/force-app/main/default/objects/ItemEstoque__c/fields/CestaBasica__c.field-meta.xml
<CustomField>
    <fullName>CestaBasica__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cesta básica</label>
    <referenceTo>CestaBasica__c</referenceTo>
    <relationshipLabel>Itens de Estoques</relationshipLabel>
    <relationshipName>ItensEstoques</relationshipName>
    <type>Lookup</type>
</CustomField>