dev-capec/force-app/main/default/objects/ItemEstoque__c/fields/Estoque__c.field-meta.xml
<CustomField>
    <fullName>Estoque__c</fullName>
    <label>Estoque</label>
    <referenceTo>Estoque__c</referenceTo>
    <relationshipLabel>Itens</relationshipLabel>
    <relationshipName>ItensEstoques</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>