dev-capec/force-app/main/default/objects/ItemEstoque__c/fields/Fabricante__c.field-meta.xml
<CustomField>
    <fullName>Fabricante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fabricante</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Itens de Estoques</relationshipLabel>
    <relationshipName>ItensEstoques</relationshipName>
    <type>Lookup</type>
</CustomField>