dev-capec/force-app/main/default/objects/ItemEstoque__c/fields/UnidadeMedida__c.field-meta.xml
<CustomField>
    <fullName>UnidadeMedida__c</fullName>
    <label>Unidade de medida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>Quantidade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>