dev-capec/force-app/main/default/objects/ItemEstoque__c/recordTypes/CestaBasica.recordType-meta.xml
<RecordType>
    <fullName>CestaBasica</fullName>
    <active>false</active>
    <label>Cesta básica</label>
</RecordType>